fix controller naming

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,6 @@
 %h1 Make your finance great again!
 
-%p Here you can find a pritty and simple expense tracker
+%p Here you can find a pritty and simple expenses tracker
 
 = link_to 'Your expenses', expenses_path
 
