--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -1,4 +1,5 @@
 %h1 Expense#index
 - @expenses.each do |expense|
   %p= expense.name
-  %p price = expenses.value
+  %p= "price: #{expense.value}"
+  %hr.mt-1.mb-1
