--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -1,7 +1,8 @@
 %h1 Expense#index
 = link_to 'New expense', new_expense_path
+%br
 - @expenses.each do |expense|
-  %p= expense.name
+  =link_to expense.name, expense_path(expense)
   %p= "price: #{expense.value}"
   = link_to 'Edit expense', edit_expense_path(expense)
   = button_to 'Delete expense', expense_path(expense), method: :delete
