--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -1,5 +1,8 @@
 %h1 Expense#index
+%p Total value:
+%p= @expenses.sum_value
 = link_to 'New expense', new_expense_path
+= link_to 'All', expenses_path
 - Category.all.each do |category|
   = link_to "#{category.name}", expenses_path(category_id: category.id)
 %hr.mt-1.mb-1
@@ -7,9 +10,12 @@
 = link_to 'Newest first', expenses_path(sort: 'created_at_desc')
 = link_to 'Oldest first', expenses_path(sort: 'created_at_asc')
 %br
-- @expenses.each do |expense|
+- @expenses.object.each do |expense|
   =link_to expense.name, expense_path(expense)
   %p= "price: #{expense.value}"
   = link_to 'Edit expense', edit_expense_path(expense)
-  = button_to 'Delete expense', expense_path(expense), method: :delete
+  = button_to 'Delete expense',
+    expense_path(expense),
+    method: :delete,
+    class: "btn btn-danger"
   %hr.mt-1.mb-1
