--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <div class="container">
+      <%= render partial: 'layouts/partials/header' %>
       <%= render partial: 'layouts/partials/flashes', locals: {flash:} %>
       <%= yield %>
     </div>
