--- a/app/views/expense_sharings/index.html.haml
+++ b/app/views/expense_sharings/index.html.haml
@@ -7,5 +7,8 @@ Hey here you can find lists of expenses shared with you:
 
 
 You share your expenses with:
-- current_user.followers.each do |recipient|
-  %p= recipient.email
+- @sended_expenses.each do |sended_expense|
+  .card.mt-2
+    .card-body.d-inline-flex.justify-content-around
+      %p= sended_expense.recipient.email
+      = button_to "Stop share", expense_sharing_path(sended_expense), method: :delete , class: 'btn btn-danger'
