add headers to expense sharings index

--- a/app/views/expense_sharings/index.html.haml
+++ b/app/views/expense_sharings/index.html.haml
@@ -1,4 +1,4 @@
-Hey here you can find lists of expenses shared with you:
+%h3 Hey here you can find lists of expenses shared with you:
 
 - @shared_expenses.each do |shared_expense|
   .card.mt-2
@@ -6,7 +6,7 @@ Hey here you can find lists of expenses shared with you:
       =link_to "#{shared_expense.sender.email}", expense_sharing_path(shared_expense)
 
 
-You share your expenses with:
+%h3 You share your expenses with:
 - @sended_expenses.each do |sended_expense|
   .card.mt-2
     .card-body.d-inline-flex.justify-content-around
